k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: portfolio

spec:
  replicas: 2

  selector:
    matchLabels:
      app: portfolio

  template:
    metadata:
      labels:
        app: portfolio

    spec:
      containers:
      - name: portfolio

        image: abhaysahu403/portfolio:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 80
