k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: portfolio-service

spec:
  selector:
    app: portfolio

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
